# pycproject

./: CMakeLists.txt  compile_commands.json  some.bc  some.cpp  some.ll
.cache/clangd/index/: hello_pass.cpp.2C178192B324DD6B.idx  pycproject.cpp.EBCA4C98E7FE5932.idx
hello_pass/: CMakeLists.txt  hello_pass.cpp  hello_pass.h
